--- a/app/js/components/Anchor/Anchor.scss
+++ b/app/js/components/Anchor/Anchor.scss
@@ -47,10 +47,12 @@
 
 	.bounceUp {
 		animation: bounceUp 2s ease-in infinite;
+		backface-visibility: hidden;
 	}
 
 	.bounceDown {
 		animation: bounceDown 2s ease-in infinite;
+		backface-visibility: hidden;
 	}
 }
 
@@ -60,6 +62,7 @@
 	18% {transform:initial;}
 	25% {transform: translateY(-50%);}
 	35% {transform: initial;}
+	100% {transform: initial;}
 }
 
 @keyframes bounceDown {
@@ -68,4 +71,5 @@
 	18% {transform:rotate(180deg);}
 	25% {transform: translateY(50%) rotate(180deg);}
 	35% {transform: rotate(180deg);}
+	100% {transform: rotate(180deg);}
 }
