--- a/app/js/components/Jobs/Position.scss
+++ b/app/js/components/Jobs/Position.scss
@@ -1,8 +1,65 @@
+@import '../../../css/variables.scss';
+@import '../../../css/mixins.scss';
+
 .position {
+	position: relative;
 	width: 100%;
 	height: 100px;
 	margin-bottom: 14px;
 	padding: 25px;
 	white-space: pre-line;
 	cursor: pointer;
+
+	.description-wrapper {
+		width: 90%;
+	}
+
+	.description {
+		margin-top: 15px;
+	}
+
+	.submit {
+		text-decoration: underline;
+		margin: 15px 0 20px 0;
+	}
+
+	.toggle {
+		z-index: 10;
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 60px;
+		height: 60px;
+
+		img {
+			width: 20px;
+			float: right;
+			margin: 30px 25px 0 0;
+		}
+	}
+
+	.content {
+		z-index: 1;
+	}
+
+	.click-background {
+		z-index: 5;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+}
+
+@media(max-width: $innerContentMaxWidth) {
+	.position .toggle img {margin: 15px 15px 0 0;}
+}
+
+.position.open {
+	height: initial !important;
+
+	.toggle img {
+		transform: rotate(180deg);
+	}
 }
