--- a/app/js/components/Preloader/Preloader.scss
+++ b/app/js/components/Preloader/Preloader.scss
@@ -10,7 +10,7 @@
 		top: 0;
 		left: 0;
 		width: 100vw;
-		height: 100vh;
+		height: 100%;
 		z-index: 10;
 		background: white;
 		opacity: 1;
@@ -41,6 +41,10 @@
 			opacity: 0;
 		}
 	}
+
+	.overlay {z-index: 201;}
+	.menu {z-index: 100;}
+	.content {z-index: 1;}
 }
 
 #app div.component.preloader.loaded {
