--- a/app/js/components/Work/Work.scss
+++ b/app/js/components/Work/Work.scss
@@ -1,5 +1,6 @@
 @import '../../../css/variables.scss';
 @import '../../../css/mixins.scss';
+@import '../../../css/util.scss';
 
 #app div.component.work {
 	width: $innerContentMaxWidth;
