--- a/app/js/components/Work/WorkEntry.scss
+++ b/app/js/components/Work/WorkEntry.scss
@@ -32,20 +32,14 @@
 
 	.workentry .header {
 		position: relative;
-		color: white;
+		color: black;
+		border: 1px solid black;
+		background-color: white;
 
 		.divider {
 			width: 100%;
 			height: 2px;
 			margin-top: 6px;
-			background-color: white;
-		}
-
-		.arrow {
-			position: absolute;
-			bottom: $workCellPadding;
-			right: $workCellPadding;
-			width: 25px;
 		}
 	}
 
@@ -105,8 +99,8 @@
 	.workentry:nth-child(9) .hover-container {overflow: initial;}
 	.workentry:nth-child(9) .hover-container .hover {width: initial; height: 100%; right: 0; left: initial;}
 
-	.workentry:last-child > div > div:after {@include extrusion('bottom', $workBottomExtrusionSize);}
-	.workentry:last-child .hover-container {margin-bottom: -$workBottomExtrusionSize; overflow: initial;}
+	// .workentry:nth-child(15) > div > div:after {@include extrusion('bottom', $workBottomExtrusionSize);}
+	// .workentry:nth-child(15) .hover-container {margin-bottom: -$workBottomExtrusionSize; overflow: initial;}
 	//end add odd extrusions
 
 	//remove outer table padding
