Fixed video not being 16:9 on desktop. Made coin animations affect their outlines only. Fixed work section box sizing.

--- a/app/js/components/About/About.scss
+++ b/app/js/components/About/About.scss
@@ -8,6 +8,7 @@
 
 	.header {
 		$headerPadding: 25px;
+		font-size: 0.9em;
 
 		position: relative;
 		width: calc(33.33333333333333% - 7.5px);
@@ -44,6 +45,12 @@
 	}
 
 	@media(max-width: $iphone6) {
+		$headerPadding: 15px;
+
+		.header {
+			padding: $headerPadding;
+		}
+
 		.text-container {
 			padding: 18px 20px;
 		}
