--- a/app/js/components/Work/WorkEntry.scss
+++ b/app/js/components/Work/WorkEntry.scss
@@ -46,6 +46,7 @@
 	.workentry .content {
 		position: relative;
 		cursor: pointer;
+		z-index: 2;
 
 		.icon {
 			position: absolute;
@@ -66,6 +67,10 @@
 			transition: opacity 0.4s;
 			backface-visibility: hidden;
 			z-index: 5;
+
+			.hover {
+				z-index: 5;
+			}
 
 			img {
 				position: absolute;
@@ -201,7 +206,7 @@
 		.workentry:nth-child(7) > div > div:after {content: initial;}
 
 		.workexpanded {
-			padding: 0 10px;
+			padding: 0 8px;
 		}
 	}
 }
