--- a/app/js/components/Culture/Culture.scss
+++ b/app/js/components/Culture/Culture.scss
@@ -36,6 +36,7 @@
 			position: relative;
 			z-index: 2;
 			margin-top: -35px;
+			padding-left: 10px;
 		}
 		img {
 			position: relative;
@@ -70,8 +71,13 @@
 
 	.coin2 {
 		> div {
+			position: relative;
 			width: 53%;
 			margin: 20px 0 0 20px;
+		}
+
+		img:first-child {
+			position: absolute;
 		}
 	}
 
@@ -98,6 +104,7 @@
 			z-index: 2;
 			margin-top: -35px;
 			position: relative;
+			padding-left: 10px;
 		}
 
 		img {
@@ -134,6 +141,11 @@
 			margin: 20px 70px 0 0;
 			width: 50%;
 			float: right;
+			position: relative;
+		}
+
+		.coin1 img:first-child {
+			position: absolute;
 		}
 
 		.ec-logo {
@@ -154,6 +166,11 @@
 		> div {
 			width: 58%;
 			float: right;
+			position: relative;
+		}
+
+		img:first-child {
+			position: absolute;
 		}
 	}
 
@@ -390,10 +407,10 @@
 
 //animations
 .coin1 img {
-	animation: spin 0.6s linear infinite;
+	animation: spin 1.2s linear infinite;
 	animation-play-state: paused;
 }
-.coin1 img:hover {
+.coin1 > div:hover img {
 	animation-play-state: running;
 }
 @keyframes spin {
@@ -402,10 +419,10 @@
 }
 
 .coin2 img {
-	animation: tilt 0.8s ease-in infinite;
+	animation: tilt 1.2s ease-in infinite;
 	animation-play-state: paused;
 }
-.coin2 img:hover {
+.coin2 > div:hover img:last-child {
 	animation-play-state: running;
 }
 @keyframes tilt {
@@ -415,10 +432,10 @@
 }
 
 .coin3 img {
-	animation: pulse 0.8s linear infinite;
+	animation: pulse 1.2s linear infinite;
 	animation-play-state: paused;
 }
-.coin3 img:hover {
+.coin3 > div:hover img:last-child {
 	animation-play-state: running;
 }
 @keyframes pulse {
@@ -427,7 +444,7 @@
 	100% {transform: initial}
 }
 .ec-logo img {
-	animation: spin 0.6s linear infinite;
+	animation: spin 1.2s linear infinite;
 	animation-play-state: paused;
 }
 .ec-logo img:hover {
