Added The Brain Project to affiliates. Fixed various spacing issues. Added updated copy. Removed Copywriter position from Jobs.

--- a/app/js/components/Carousel/Carousel.scss
+++ b/app/js/components/Carousel/Carousel.scss
@@ -18,6 +18,12 @@
 		height: auto;
 	}
 
+	.title {
+		text-align: center;
+		margin-bottom: 13px;
+		font-size: 0.8em;
+	}
+
 	.copy {
 		position: absolute;
 		z-index: 2;
