--- a/app/js/components/Work/WorkExpanded.scss
+++ b/app/js/components/Work/WorkExpanded.scss
@@ -63,7 +63,7 @@
 		}
 	}
 
-	@media(max-width: $iphone6) {
+	@media(max-width: $tablet) {
 		.close .close-button {
 			width: 25px;
 			height: 25px;
