--- a/app/js/components/Culture/Culture.scss
+++ b/app/js/components/Culture/Culture.scss
@@ -131,7 +131,7 @@
 	.coin-icon-group {
 		width: 100%;
 		height: 254px;
-		margin-top: 30px;
+		margin-bottom: 20px;
 
 		.coin1, .ec-logo {
 			width: 50%;
@@ -272,9 +272,25 @@
 			opacity: 1 !important;
 		}
 
+		.coin-icon-group {
+			margin-bottom: 0;
+			margin-top: 60px;
+			height: 200px;
+
+			.ec-logo {
+				margin-top: 10	0px;
+			}
+		}
+
 		.squarefaces {
+			margin-top: 80px;
+
 			.caption {
 				margin-top: 0px;
+			}
+
+			img {
+				padding-left: 14px;
 			}
 		}
 
@@ -285,6 +301,10 @@
 		.cacti {
 			float: left;
 			margin: 60px 0px 30px 50px;
+		}
+
+		.pillowfight img {
+			margin-right: 14px;
 		}
 	}
 
@@ -305,6 +325,10 @@
 			}
 		}
 
+		.cacti {
+			margin-top: 0;
+		}
+
 		.cacti > div {
 			width: 20%;
 			margin-right: 40%;
@@ -314,6 +338,7 @@
 			float: right;
 			margin-right: 14px;
 			margin-top: 40px;
+			margin-bottom: 28px;
 			width: 70%;
 
 			> div {
