Added support for tablet, iphone5, iphone6 landscape.

--- a/app/css/variables.scss
+++ b/app/css/variables.scss
@@ -1,8 +1,11 @@
 /* Screen sizes */
 $tablet: 768px;
+$tablet-landscape: 1024px;
 $phone: 375px;
 $iphone5: 320px;
+$iphone5-landscape: 568px;
 $iphone6: 414px;
+$iphone6-landscape: 667px;
 /* End screen sizes */
 
 /* element dimensions */
