--- a/app/js/components/Jobs/Position.scss
+++ b/app/js/components/Jobs/Position.scss
@@ -57,6 +57,10 @@
 	.description-wrapper {
 		font-size: 0.7em;
 	}
+
+	.submit {
+		font-size: 0.8em;
+	}
 }
 
 @media(max-width: $innerContentMaxWidth) {
