Added breakpoint for iPhone 6.

--- a/app/css/variables.scss
+++ b/app/css/variables.scss
@@ -6,6 +6,7 @@ $iphone5: 320px;
 $iphone5-landscape: 568px;
 $iphone6: 414px;
 $iphone6-landscape: 667px;
+$iphone6Small: 375px;
 /* End screen sizes */
 
 /* element dimensions */
