Added the ability to specify multiple pieces of content on a single work tile. Updated work section. Fixed jobs email address.

--- a/app/js/components/Work/WorkEntry.scss
+++ b/app/js/components/Work/WorkEntry.scss
@@ -87,8 +87,10 @@
 	}
 
 	.workentry .content .icon {
-		&[src*="Car"], &[src*="Camera"] {
-			width: 25%;
+		max-width: 25%;
+
+		&[src*='Eye'] {
+			width: 20%;
 		}
 	}
 
