--- a/app/js/components/Work/WorkExpanded.scss
+++ b/app/js/components/Work/WorkExpanded.scss
@@ -41,6 +41,10 @@
 			height: 100%;
 		}
 
+		> div:not(:last-child) {
+			margin-bottom: 45px;
+		}
+
 		p {
 			text-align: center;
 			// padding: 0 10%;
