--- a/app/js/components/Jobs/Position.scss
+++ b/app/js/components/Jobs/Position.scss
@@ -29,8 +29,8 @@
 		position: absolute;
 		top: 0;
 		right: 0;
-		width: 60px;
-		height: 60px;
+		width: 50px;
+		height: 50px;
 
 		img {
 			width: 20px;
@@ -72,5 +72,18 @@
 
 	.toggle img {
 		transform: rotate(180deg);
+	}
+}
+
+@media(max-width: $iphone6) {
+	.position {
+		.content .title {
+			max-width: 130px;
+		}
+
+		.toggle img {
+			width: 15px;
+			margin: 12px 9px 0 0;
+		}
 	}
 }
